<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfollio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="project_title1">SPOTIFY STREAMER</string>
    <string name="project_title2">SCORES APP</string>
    <string name="project_title3">LIBRARY APP</string>
    <string name="project_title4">BUILD IT BIGGER</string>
    <string name="project_title5">XYZ READER</string>
    <string name="my_own_app">CAPSTONE: MY OWN APP</string>

</resources>
