<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfollioActivity">

    <TextView
        android:id="@+id/title1"
        style="@style/TitleTextViewStyle"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project1"
            style="@style/TextViewStyle"
            android:text="@string/project_title1" />

        <TextView
            android:id="@+id/project2"
            style="@style/TextViewStyle"
            android:layout_below="@+id/project1"
            android:text="@string/project_title2" />

        <TextView
            android:id="@+id/project3"
            style="@style/TextViewStyle"
            android:layout_below="@+id/project2"
            android:text="@string/project_title3" />

        <TextView
            android:id="@+id/project4"
            style="@style/TextViewStyle"
            android:layout_below="@+id/project3"
            android:text="@string/project_title4" />

        <TextView
            android:id="@+id/project5"
            style="@style/TextViewStyle"
            android:layout_below="@+id/project4"
            android:text="@string/project_title5" />

        <TextView
            android:id="@+id/myOwnApp"
            style="@style/TextViewStyle"
            android:layout_below="@+id/project5"
            android:background="@color/myAppbackground"
            android:text="@string/my_own_app"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
